Fixed para numbering for EA 1.1-3.10.

--- a/01_agama/ekottarika/03/EA_03_01.md
+++ b/01_agama/ekottarika/03/EA_03_01.md
@@ -27,11 +27,11 @@ next: EA_03_02.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.554a15'>爾時，諸比丘白世尊曰： 「諸法之本如來所説。 唯願，世尊，為諸比丘説此妙義。 諸比丘從如來聞已，便當受持。」</td>
-    <td id='p4'>4. The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”</td>
+    <td>The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.554a18'>爾時，世尊告諸比丘： 「諦聽！諦聽，善思念之！ 吾當為汝廣分別之。」</td>
-    <td id='p5'>5. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”</td>
+    <td id='p4'>4. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.554a19'>答曰： 「如是，世尊。」</td>
@@ -39,31 +39,31 @@ next: EA_03_02.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.554a19'>諸比丘前受教已，世尊告曰： 「若有比丘正身、正意，結跏趺坐，繋念在前。 無有他想，專精念佛。</td>
-    <td id='p6'>6. Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting the Buddha.</td>
+    <td id='p5'>5. Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting the Buddha.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.554a22'>「觀如來形，未曾離目。 已不離目，便念如來功徳： 『如來體者金剛所成。 十力具長，四無所畏在眾勇健。 如來顏貎端正、無雙、視之無厭。 戒徳成就，猶如金剛而不可毀，清淨、無瑕亦如琉璃。』</td>
-    <td id='p7'>7. “He visualizes the Tathāgata’s form until it never leaves his eyes. Once it doesn’t leave his eyes, then he recollects the Tathāgata’s virtues: ‘The Tathāgata’s body is made of diamond. Having perfected the ten powers, he’s courageous amidst his assembly with four kinds of fearlessness. The Tathāgata’s appearance is handsome, unmatched, and not tiresome to watch. His discipline and virtue are accomplished, unbreakable like diamond, and pure and flawless like beryl.’<sup id="ref3"><a href="#n3">3</a></sup></td>
+    <td id='p6'>6. “He visualizes the Tathāgata’s form until it never leaves his eyes. Once it doesn’t leave his eyes, then he recollects the Tathāgata’s virtues: ‘The Tathāgata’s body is made of diamond. Having perfected the ten powers, he’s courageous amidst his assembly with four kinds of fearlessness. The Tathāgata’s appearance is handsome, unmatched, and not tiresome to watch. His discipline and virtue are accomplished, unbreakable like diamond, and pure and flawless like beryl.’<sup id="ref3"><a href="#n3">3</a></sup></td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.554a26'>「如來三昧未始有減。 已息，永寂而無他念。憍慢、強梁、諸情憺怕。 欲意、恚想、愚惑之心，猶豫網結，皆悉除盡。</td>
-    <td id='p8'>8. “The Tathāgata’s samādhi never lacked anything. Once calmed, he was forever tranquil, without another thought. Arrogance, violence, and the passions were pacified. He had completely eliminated the entangling bonds of wishes, angry notions, confused thoughts, and doubts.</td>
+    <td id='p7'>7. “The Tathāgata’s samādhi never lacked anything. Once calmed, he was forever tranquil, without another thought. Arrogance, violence, and the passions were pacified. He had completely eliminated the entangling bonds of wishes, angry notions, confused thoughts, and doubts.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.554a29'>「如來慧身智無崖底、無所罣礙。 如來身者解脫成就，諸趣已盡，無復生分言： 『我當更墮於生死。』 如來身者度知、見城。 知他人根應度、不度。 『此死，生彼。 周旋，往來生死之際。』 有解脫者、無解脫者，皆具知之。</td>
-    <td id='p9'>9. “The Tathāgata’s body of wisdom was a knowledge without limit or impediment. The Tathāgata’s body had accomplished liberation, had reached the end of destinations, and no longer would decide: ‘I will fall into birth and death again.’ The Tathāgata’s body had reached knowing and seeing the city [of <em>nirvāṇa</em>]. He knew whether other people had the capacity to be liberated or not. ‘Here they die, and there they’re born. Round they turn, reborn until the end of birth and death.’ He fully knew who was liberated and who wasn’t.</td>
+    <td id='p8'>8. “The Tathāgata’s body of wisdom was a knowledge without limit or impediment. The Tathāgata’s body had accomplished liberation, had reached the end of destinations, and no longer would decide: ‘I will fall into birth and death again.’ The Tathāgata’s body had reached knowing and seeing the city [of <em>nirvāṇa</em>]. He knew whether other people had the capacity to be liberated or not. ‘Here they die, and there they’re born. Round they turn, reborn until the end of birth and death.’ He fully knew who was liberated and who wasn’t.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.554b4'>「是謂修行念佛便有名譽，成大果報、諸善普至，得甘露味，至無為處。 便成神通，除諸亂想，獲沙門果，自致涅槃。</td>
-    <td id='p10'>10. “This is how someone who cultivates the recollection of the Buddha will become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
+    <td id='p9'>9. “This is how someone who cultivates the recollection of the Buddha will become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.554b7'>「是故，諸比丘，常當思惟、不離佛念。 便當獲此諸善功徳。 如是，諸比丘當作是學。」</td>
-    <td id='p11'>11. “Therefore, monks, one should constantly recollect the Buddha and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”</td>
+    <td id='p10'>10. “Therefore, monks, one should constantly recollect the Buddha and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.554b9'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
-    <td id='p12'>12. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+    <td id='p11'>11. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
   </tr>
 </table>
 
