--- a/01_agama/ekottarika/03/EA_03_09.md
+++ b/01_agama/ekottarika/03/EA_03_09.md
@@ -15,15 +15,15 @@ next: EA_03_10.html
   <th class='en'>9. The Body</th>
   <tr>
     <td class='ch' title='T125.2.556b15'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
-    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.556b16'>爾時，世尊告諸比丘： 「當修行一法，當廣布一法。 修行一法已，便有名譽，成大果報、諸善普至。 得甘露味，至無為道。 便成神通，除諸亂想，逮沙門果，自致涅槃。 云何為一法？ 所謂念身。」</td>
-    <td>It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state.<sup id="ref2"><a href="#n2">2</a></sup> They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What’s this one thing? It’s called recollecting the body.”</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state.<sup id="ref2"><a href="#n2">2</a></sup> They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What’s this one thing? It’s called recollecting the body.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.556b20'>佛告諸比丘： 「云何修行念身便有名譽，成大果報、諸善普至，得甘露味，至無為處？ 便成神通，除諸亂想，獲沙門果，自致涅槃？」</td>
-    <td>The Buddha addressed the monks, “How does someone who cultivates the recollection of the body become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves?”</td>
+    <td id='p3'>3. The Buddha addressed the monks, “How does someone who cultivates the recollection of the body become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves?”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.556b23'>爾時，諸比丘白世尊曰： 「諸法之本如來所宣。 唯願，世尊，為諸比丘説此妙法。 諸比丘從如來聞法已，便當受持。」</td>
@@ -31,7 +31,7 @@ next: EA_03_10.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.556b26'>爾時，世尊告諸比丘： 「諦聽！諦聽，善思念之！ 吾當為汝廣分別説。」</td>
-    <td>The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”</td>
+    <td id='p4'>4. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.556b27'>諸比丘對曰： 「如是，世尊。」</td>
@@ -39,23 +39,23 @@ next: EA_03_10.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.556b28'>諸比丘前受教已，世尊告曰： 「若有比丘正身、正意，結跏趺坐，繋念在前。 無有他想，專精念身。</td>
-    <td>Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting the body.</td>
+    <td id='p5'>5. Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting the body.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.556c1'>「所謂念身者髮、毛、爪、齒、皮、肉、筋、骨，膽、肝、肺、心、脾、腎、大腸、小腸、白䐈、膀胱，屎、尿、百葉滄蕩脾泡、溺、涙、唾涕，膿、血、肪脂、漾髑髏、腦。 何者是身為？ 「地種是也。」 「水種是也。」 「火種是耶。」 「風種是也。」 為父種母種所造耶？ 從何處來？ 為誰所造？ 眼、耳、鼻、口、身、心，此終當生何處？</td>
-    <td>“‘Recollecting the body’ means the beard, hair, nails, teeth, skin, muscles, sinews, and bones; gall bladder, liver, lungs, heart, spleen, kidneys, large and small intestines, white membrane, and bladder; feces, urine, the contents of the stomach,<sup id="ref3"><a href="#n3">3</a></sup> tears, saliva, and snot; and pus, blood, fat, cerebral fluid,<sup id="ref4"><a href="#n4">4</a></sup> and brain. What is the body made of? ‘This is earth element.’ ‘This is water element.’ ‘This is fire element.’ ‘This is air element.’ How is it made from the seeds of father and mother? Where does it come from? Who made it? From whence did the eye, ear, nose, tongue, body, and mind ultimately arise?</td>
+    <td id='p6'>6. “‘Recollecting the body’ means the beard, hair, nails, teeth, skin, muscles, sinews, and bones; gall bladder, liver, lungs, heart, spleen, kidneys, large and small intestines, white membrane, and bladder; feces, urine, the contents of the stomach,<sup id="ref3"><a href="#n3">3</a></sup> tears, saliva, and snot; and pus, blood, fat, cerebral fluid,<sup id="ref4"><a href="#n4">4</a></sup> and brain. What is the body made of? ‘This is earth element.’ ‘This is water element.’ ‘This is fire element.’ ‘This is air element.’ How is it made from the seeds of father and mother? Where does it come from? Who made it? From whence did the eye, ear, nose, tongue, body, and mind ultimately arise?</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.556c7'>「如是，諸比丘，名曰念身。便得具足，成大果報、諸善普至，得甘露味，至無為處。 便成神通，除諸亂想，獲沙門果，自致涅槃。</td>
-    <td>“This is how someone who cultivates the recollection of the body will become well known,<sup id="ref5"><a href="#n5">5</a></sup> achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
+    <td id='p7'>7. “This is how someone who cultivates the recollection of the body will become well known,<sup id="ref5"><a href="#n5">5</a></sup> achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.556c10'>「是故，諸比丘，常當思惟、不離身念。 便當獲此諸善功徳。 如是，諸比丘當作是學。」</td>
-    <td>“Therefore, monks, one should constantly recollect the body and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”</td>
+    <td id='p8'>8. “Therefore, monks, one should constantly recollect the body and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.556c12'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
-    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+    <td id='p9'>9. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
   </tr>
 </table>
 
