--- a/01_agama/ekottarika/02/EA_02_07.md
+++ b/01_agama/ekottarika/02/EA_02_07.md
@@ -15,19 +15,19 @@ next: EA_02_08.html
   <th class='en'>7. Peace</th>
   <tr>
     <td class='ch' title='T125.2.553a28'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
-    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.553a29'>爾時，世尊告諸比丘： 「當修行一法，當廣布一法。 便成神通，除諸亂想，獲沙門果，自致涅槃。 云何為一法？ 所謂念休息。 當善修行，當廣演布。 便成神通，去諸亂想，獲沙門果，自致涅槃。</td>
-    <td>It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What’s that one thing? It’s called recollecting peace. One should cultivate and widely disseminate it. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What’s that one thing? It’s called recollecting peace. One should cultivate and widely disseminate it. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.553b4'>「是故，諸比丘，當修行一法，當廣布一法。 如是，諸比丘當作是學。」</td>
-    <td>“Therefore, monks, you should cultivate this one thing and widely disseminate this one thing. Thus, monks, should you train yourselves.”</td>
+    <td id='p3'>3. “Therefore, monks, you should cultivate this one thing and widely disseminate this one thing. Thus, monks, should you train yourselves.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.553b5'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
-    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
   </tr>
 </table>
 
