--- a/01_agama/ekottarika/03/EA_03_04.md
+++ b/01_agama/ekottarika/03/EA_03_04.md
@@ -15,15 +15,15 @@ next: EA_03_05.html
   <th class='en'>4. The Precepts</th>
   <tr>
     <td class='ch' title='T125.2.555a5'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
-    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.555a6'>爾時，世尊告諸比丘： 「當修行一法，當廣布一法。 修行一法已，便有名譽，成大果報，諸善普至。 得甘露味，至無為處。 便成神通，除諸亂想，逮沙門果，自致涅槃。 云何為一法？ 所謂念戒。」</td>
-    <td>It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state. They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What’s this one thing? It’s called recollecting the precepts.”</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state. They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What’s this one thing? It’s called recollecting the precepts.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.555a10'>佛告諸比丘： 「云何修行念戒便有名譽，成大果報、諸善普至，得甘露味，至無為處？ 便成神通，除諸亂想，獲沙門果，自致涅槃？」</td>
-    <td>The Buddha addressed the monks, “How does someone who cultivates the recollection of the precepts become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruit of the ascetic, and bring about <em>nirvāṇa</em> themselves?”</td>
+    <td id='p3'>3. The Buddha addressed the monks, “How does someone who cultivates the recollection of the precepts become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruit of the ascetic, and bring about <em>nirvāṇa</em> themselves?”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.555a13'>爾時，諸比丘白世尊曰： 「諸法之本如來所説。 唯願，世尊，為諸比丘説此妙義。 諸比丘從如來聞已，便當受持。」</td>
@@ -31,7 +31,7 @@ next: EA_03_05.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.555a16'>爾時，世尊告諸比丘： 「諦聽！諦聽，善思念之！ 吾當為汝廣分別説。」</td>
-    <td>The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”</td>
+    <td id='p4'>4. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.555a17'>諸比丘對曰： 「如是，世尊。」</td>
@@ -39,23 +39,23 @@ next: EA_03_05.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.555a18'>諸比丘前受教已，世尊告曰： 「若有比丘正身、正意，結跏趺坐，繋念在前。 無有他想，專精念戒。</td>
-    <td>Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting the precepts.</td>
+    <td id='p5'>5. Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting the precepts.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.555a20'>「所謂戒者息諸惡故，戒能成道，令人歡喜。 戒纓絡身，現眾好故。 夫禁戒者猶吉祥瓶所願便剋，諸道品法皆由戒成。</td>
-    <td>“‘The precepts’ refers to the precepts that make it possible to achieve the path by stopping evil deeds and causing people to rejoice. The precepts are a jeweled body because they make many beautiful things appear. The rules and precepts are like a fortune vase that provides what one wishes,<sup id="ref2"><a href="#n2">2</a></sup> for the factors of the path are derived from acccomplishing the precepts.</td>
+    <td id='p6'>6. “‘The precepts’ refers to the precepts that make it possible to achieve the path by stopping evil deeds and causing people to rejoice. The precepts are a jeweled body because they make many beautiful things appear. The rules and precepts are like a fortune vase that provides what one wishes,<sup id="ref2"><a href="#n2">2</a></sup> for the factors of the path are derived from acccomplishing the precepts.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.555a22'>「如是，比丘，行禁戒者成大果報、諸善普至，得甘露味，至無為處。 便成神通，除諸亂想，獲沙門果，自致涅槃。</td>
-    <td>“This is how someone who cultivates the recollection of the precepts will become well known,<sup id="ref3"><a href="#n3">3</a></sup> achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
+    <td id='p7'>7. “This is how someone who cultivates the recollection of the precepts will become well known,<sup id="ref3"><a href="#n3">3</a></sup> achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.555a25'>「是故，諸比丘，常當思惟、不離戒念。 便當獲此諸善功徳。 如是，諸比丘當作是學。」</td>
-    <td>“Therefore, monks, one should constantly recollect the precepts and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”</td>
+    <td id='p8'>8. “Therefore, monks, one should constantly recollect the precepts and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.555a27'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
-    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+    <td id='p9'>9. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
   </tr>
 </table>
 
