--- a/01_agama/ekottarika/03/EA_03_08.md
+++ b/01_agama/ekottarika/03/EA_03_08.md
@@ -15,15 +15,15 @@ next: EA_03_09.html
   <th class='en'>8. Breathing</th>
   <tr>
     <td class='ch' title='T125.2.556a15'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
-    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.556a16'>爾時，世尊告諸比丘： 「當修行一法，當廣布一法。 修行一法已，便有名譽，成大果報、諸善普具。 得甘露味，至無為處。 便成神通，除諸亂想，逮沙門果，自致涅槃。 云何為一法？ 所謂念安般。」</td>
-    <td>It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state. They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What’s this one thing? It’s called recollecting breathing.”<sup id="ref2"><a href="#n2">2</a></sup></td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state. They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What’s this one thing? It’s called recollecting breathing.”<sup id="ref2"><a href="#n2">2</a></sup></td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.556a20'>佛告諸比丘： 「云何修行念安般便有名譽，成大果報、眾善普具，得甘露味，至無為處？ 便成神通，除諸亂想，獲沙門果，自致涅槃？」</td>
-    <td>The Buddha addressed the monks, “How does someone who cultivates the recollection of breathing become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves?”</td>
+    <td id='p3'>3. The Buddha addressed the monks, “How does someone who cultivates the recollection of breathing become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves?”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.556a23'>爾時，諸比丘白世尊曰： 「諸法之本如來所宣。 唯願，世尊，為諸比丘説此妙義。 諸比丘從如來聞已，便當受持。」</td>
@@ -31,7 +31,7 @@ next: EA_03_09.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.556a26'>爾時，世尊告諸比丘： 「諦聽！諦聽，善思念之！ 吾當為汝廣分別説。」</td>
-    <td>The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”</td>
+    <td id='p4'>4. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.556a27'>諸比丘對曰： 「如是，世尊。」</td>
@@ -39,27 +39,27 @@ next: EA_03_09.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.556a28'>諸比丘前受教已，世尊告曰： 「若有比丘正身、正意，結跏趺坐，繋念在前。 無有他想，專精念安般。</td>
-    <td>Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting breathing.</td>
+    <td id='p5'>5. Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting breathing.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.556b1'>「所謂安般者：若息長時，亦當觀、知：『我今息長』。 若復息短，亦當觀、知：『我今息短』。 若息極冷，亦當觀、知：『我身息冷』。 若復息熱，亦當觀、知：『我今息熱』。 具觀身體從頭至足，皆當觀知。</td>
-    <td>“‘Breathing’ means observing and knowing, ‘Now my breaths are long,’ when one’s breaths are long. It means observing and knowing, ‘Now my breaths are short,’ when one’s breaths are short. It means observing and knowing, ‘Now my breaths are very cold,’ when one’s breaths are cold. It means observing and knowing, ‘Now my breaths are hot,’ when one’s breaths are hot.<sup id="ref3"><a href="#n3">3</a></sup> The practitioner fully observes their body, observing and knowing it from head to toe.</td>
+    <td id='p6'>6. “‘Breathing’ means observing and knowing, ‘Now my breaths are long,’ when one’s breaths are long. It means observing and knowing, ‘Now my breaths are short,’ when one’s breaths are short. It means observing and knowing, ‘Now my breaths are very cold,’ when one’s breaths are cold. It means observing and knowing, ‘Now my breaths are hot,’ when one’s breaths are hot.<sup id="ref3"><a href="#n3">3</a></sup> The practitioner fully observes their body, observing and knowing it from head to toe.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.556b5'>「若復息有長、短，亦當觀：『息有長、有短』。 用心持身知息長、短，皆悉知之。 尋，息出、入分別、曉了。 若心持身知息長、短，亦復知之，數息長、短分別、曉了。</td>
-    <td>“It also means observing, ‘Some of my breaths are long, and some are short,’ when one’s breaths are long and short. They keep their body in mind, fully knowing their breaths to be long or short. They immediately discern and are fully aware of it as they breath in and out. If they keep their body in mind while knowing their breaths are long or short, then they will also know the number of breaths that are long or short, discerning and understanding it clearly.</td>
+    <td id='p7'>7. “It also means observing, ‘Some of my breaths are long, and some are short,’ when one’s breaths are long and short. They keep their body in mind, fully knowing their breaths to be long or short. They immediately discern and are fully aware of it as they breath in and out. If they keep their body in mind while knowing their breaths are long or short, then they will also know the number of breaths that are long or short, discerning and understanding it clearly.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.556b8'>「如是，諸比丘，名曰念安般。便得具足，成大果報、諸善普至，得甘露味，至無為處。 便成神通，除諸亂想，獲沙門果，自致涅槃。</td>
-    <td>“This is how someone who cultivates the recollection of breathing will become well known,<sup id="ref4"><a href="#n4">4</a></sup> achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
+    <td id='p8'>8. “This is how someone who cultivates the recollection of breathing will become well known,<sup id="ref4"><a href="#n4">4</a></sup> achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.556b11'>「是故，諸比丘，常當思惟、不離安般念。 便當獲此諸善功徳。 如是，諸比丘，當作是學。」</td>
-    <td>“Therefore, monks, one should constantly attend to this and not part from the recollection of breathing. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”</td>
+    <td id='p9'>9. “Therefore, monks, one should constantly attend to this and not part from the recollection of breathing. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.556b13'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
-    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+    <td id='p10'>10. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
   </tr>
 </table>
 
