Fixed para numbering, etc.

--- a/01_agama/ekottarika/09/EA_09_01.md
+++ b/01_agama/ekottarika/09/EA_09_01.md
@@ -15,11 +15,11 @@ next: EA_09_02.html
   <th class='en'>1. The Laywoman</th>
   <tr>
     <td class='ch' title='T125.2.562a14'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
-    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562a15'>爾時，世尊告諸比丘： 「猶如母人心懷篤信，唯有一子。 恒作是念： 『云何當教使成為人？』」</td>
-    <td>It was then that the Bhagavān addressed the monks, “Take the example of a mother who holds her only son dear and devotes herself to him. She often thinks, ‘How should I instruct him so that he’ll become a man?’”</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Take the example of a mother who holds her only son dear and devotes herself to him. She often thinks, ‘How should I instruct him so that he’ll become a man?’”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562a17'>爾時，諸比丘白世尊曰： 「我等，世尊，不解此義。 世尊是諸法之本。 如來所陳靡不承受。 唯願，世尊，與諸比丘説此深法。 聞已，奉行。」</td>
@@ -27,7 +27,7 @@ next: EA_09_02.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.562a20'>爾時，世尊告諸比丘： 「諦聽！諦聽，善思念之。 吾當為汝分別其義。」</td>
-    <td>The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern the meaning of this for you.”</td>
+    <td id='p3'>3. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern the meaning of this for you.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562a21'>諸比丘對曰： 「如是，世尊。」 爾時，諸比丘從佛受教。</td>
@@ -35,19 +35,19 @@ next: EA_09_02.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.562a22'>世尊告曰： 「猶彼優婆斯心懷、篤信，作是教訓： 『汝今在家，當如質多長者，亦如象童子。 所以然者？ 此是其限，此是其量。 世尊受證弟子，所謂質多長者、象童子也。』 若童子意欲剃除鬚髮，著三法衣，出家，學道，當如舍利弗、目犍連比丘。 所以然者？ 此是其限，此是其量，所謂舍利弗、目犍連比丘。</td>
-    <td>The Bhagavān told them, “That laywoman who holds her son dear and is devoted to him gives him this instruction, ‘While you’re living at home, you should be like the elder Citra or the youth Hastaka. Why is that? They are your standard; they are your measure. The Bhagavān accepted the realization of these disciples, the elder Citra and youth Hastaka.’ If that young man wants to cut off his hair and beard, put on the three Dharma robes, leave home, and train on the path, he should be like the monks Śāriputra or Maudgalyāyana. Why is that? Then, the monks Śāriputra and Maudgalyāyana would be his standard; they would be his measure.</td>
+    <td id='p4'>4. The Bhagavān told them, “That laywoman who holds her son dear and is devoted to him gives him this instruction, ‘While you’re living at home, you should be like the elder Citra or the youth Hastaka. Why is that? They are your standard; they are your measure. The Bhagavān accepted the realization of these disciples, the elder Citra and youth Hastaka.’ If that young man wants to cut off his hair and beard, put on the three Dharma robes, leave home, and train on the path, he should be like the monks Śāriputra or Maudgalyāyana. Why is that? Then, the monks Śāriputra and Maudgalyāyana would be his standard; they would be his measure.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562a29'>「好學正法，莫作邪業，興起非法。 設汝生此染著之想，便當墜墮三惡趣中。 善念專心，不得者得，不獲者獲，未得證者今當受證。 所以然者？ 諸比丘，信施之重實不可消，令人不得至道。</td>
-    <td>“Love training in the correct Dharma, don’t do wrong deeds, and don’t be roused by what’s not Dharma. If you produce defiled ideas here, then you’ll fall into the three bad destinies. When you’re mindful and focused, you’ll attain what you haven’t attained, acquire what you haven’t acquired, and realize in the present what you have yet to realize. Why is that? Monks, the honor of a faithful gift that can’t actually be digested will prevent a person from attaining awakening.</td>
+    <td id='p5'>5. “Love training in the correct Dharma, don’t do wrong deeds, and don’t be roused by what’s not Dharma. If you produce defiled ideas here, then you’ll fall into the three bad destinies. When you’re mindful and focused, you’ll attain what you haven’t attained, acquire what you haven’t acquired, and realize in the present what you have yet to realize. Why is that? Monks, the honor of a faithful gift that can’t actually be digested will prevent a person from attaining awakening.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562b4'>「是故，諸比丘，莫生染著之意。 已生，當滅。如是，諸比丘，當作是學。」</td>
-    <td>“Therefore, monks, don’t allow defiled ideas to arise. If they’ve already arisen, you must cease them. Thus, monks, you should train yourselves.”</td>
+    <td id='p6'>6. “Therefore, monks, don’t allow defiled ideas to arise. If they’ve already arisen, you must cease them. Thus, monks, you should train yourselves.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562b6'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
-    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+    <td id='p7'>7. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
   </tr>
 </table>
 
