--- a/01_agama/ekottarika/09/EA_09_03.md
+++ b/01_agama/ekottarika/09/EA_09_03.md
@@ -15,19 +15,19 @@ next: EA_09_04.html
   <th class='en'>3. The Mind</th>
   <tr>
     <td class='ch' title='T125.2.562c2'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
-    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562c3'>爾時，世尊告諸比丘： 「我不見一法疾於心者。 無譬可喩。猶如獼猴捨一取一，心不專定。心亦如是。前想後想所不同者，以方便法不可摸，則心迴轉疾。 是故，諸比丘，凡夫之人不能觀察心意。</td>
-    <td>It was then that the Bhagavān addressed the monks, “I don’t see a single thing as quick as the mind. It cannot be grasped without using the method of the Dharma, and then the mind spins around quickly.<sup id="ref2"><a href="#n2">2</a></sup> Therefore, monks, ordinary people are unable to observe their mind thinking.</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see a single thing as quick as the mind. It cannot be grasped without using the method of the Dharma, and then the mind spins around quickly.<sup id="ref2"><a href="#n2">2</a></sup> Therefore, monks, ordinary people are unable to observe their mind thinking.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562c6'>「是故，諸比丘，常當降伏心意，令趣善道。亦當作是學。」</td>
-    <td>“Therefore, monks, one should control their thinking to lead their mind to the good path. Thus, monks, you should train yourselves.”</td>
+    <td id='p3'>3. “Therefore, monks, one should control their thinking to lead their mind to the good path. Thus, monks, you should train yourselves.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562c8'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
-    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
   </tr>
 </table>
 
