--- a/01_agama/ekottarika/09/EA_09_04.md
+++ b/01_agama/ekottarika/09/EA_09_04.md
@@ -15,19 +15,19 @@ next: EA_09_05.html
   <th class='en'>4. The Mind (2)</th>
   <tr>
     <td class='ch' title='T125.2.562c10'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
-    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562c11'>爾時，世尊告諸比丘： 「我不見一法疾於心者。 無譬可喩。 猶如獼猴捨一取一，心不專定。 心亦如是，前想後想所念不同。 是故，諸比丘，凡夫之人不能觀察心意所由。</td>
-    <td>It was then that the Bhagavān addressed the monks, “I don’t see a single thing as quick as the mind. There’s no comparison for it. The mind drops one thing and picks up another when it isn’t focused and settled, just like a monkey. The mind is likewise when that previous and subsequent perceptions of its thoughts aren’t the same. Therefore, monks, ordinary people are unable to observe the origin of their mind’s thinking.</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see a single thing as quick as the mind. There’s no comparison for it. The mind drops one thing and picks up another when it isn’t focused and settled, just like a monkey. The mind is likewise when that previous and subsequent perceptions of its thoughts aren’t the same. Therefore, monks, ordinary people are unable to observe the origin of their mind’s thinking.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562c14'>「是故，諸比丘，常當降伏心意得趣善道。 是故，諸比丘，當作是學。」</td>
-    <td>“Therefore, monks, one should control their thinking to lead their mind to the good path. Thus, monks, you should train yourselves.”</td>
+    <td id='p3'>3. “Therefore, monks, one should control their thinking to lead their mind to the good path. Thus, monks, you should train yourselves.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562c16'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
-    <td>When the monks heard what the Buddha taught, they rejoiced and approved of it.</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved of it.</td>
   </tr>
 </table>
 
