--- a/01_agama/ekottarika/09/EA_09_05.md
+++ b/01_agama/ekottarika/09/EA_09_05.md
@@ -15,15 +15,15 @@ next: EA_09_06.html
   <th class='en'>5. Downfall</th>
   <tr>
     <td class='ch' title='T125.2.562c18'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
-    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562c19'>爾時，世尊告諸比丘： 「我恒觀見一人心中所念之事： 『此人，如屈伸臂頃，墮泥㴝中。』 所以然者？ 由惡心故，心之生病，墜墮地獄。</td>
-    <td>It was then that the Bhagavān addressed the monks, “When I continuously examine the things that a person thinks about in their mind, I see: ‘This person will fall to Hell<sup id="ref2"><a href="#n2">2</a></sup> in the time it takes to flex their arm.’ Why is that? Because of their evil thoughts, their mind becomes ill, and they fall down into Hell.”</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When I continuously examine the things that a person thinks about in their mind, I see: ‘This person will fall to Hell<sup id="ref2"><a href="#n2">2</a></sup> in the time it takes to flex their arm.’ Why is that? Because of their evil thoughts, their mind becomes ill, and they fall down into Hell.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562c22'>爾時，世尊便説偈言：</td>
-    <td>The Bhagavān then spoke in verse:</td>
+    <td id='p3'>3. The Bhagavān then spoke in verse:</td>
   </tr>
 <tr>
   <td title='T125.2.562c23'><ul class='verse'>
@@ -55,11 +55,11 @@ next: EA_09_06.html
 </tr>
   <tr>
     <td class='ch' title='T125.2.562c27'>「是故，諸比丘，當降伏心，勿生穢行。 如是，諸比丘，當作是學。」</td>
-    <td>“Therefore, monks, one should control their mind and not do defiled conduct. Thus, monks, you should train yourselves.”</td>
+    <td id='p4'>4. “Therefore, monks, one should control their mind and not do defiled conduct. Thus, monks, you should train yourselves.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562c28'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
-    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
   </tr>
 </table>
 
