--- a/01_agama/ekottarika/09/EA_09_10.md
+++ b/01_agama/ekottarika/09/EA_09_10.md
@@ -45,10 +45,10 @@ next: ../10/EA_10_01.html
     二欲想在後。</li>
   </ul></td>
   <td><ul class='verse'>
-    <li>Two laywomen, two on mind,<br/>
-    One on downfall, one on birth in Heaven,<br/>
-    Perceptions that delight men and women,<br/>
-    Two on notions of desire are last.</li>
+    <li>[1-2] Two laywomen, [3-4] two on mind,<br/>
+    [5] One on downfall, [6] one on birth in Heaven,<br/>
+    [7-8] Perceptions that delight men and women,<br/>
+    [9-10] Two on notions of desire are last.</li>
   </ul></td>
 </tr>
 </table>
