--- a/01_agama/ekottarika/09/EA_09_02.md
+++ b/01_agama/ekottarika/09/EA_09_02.md
@@ -15,19 +15,19 @@ next: EA_09_03.html
   <th class='en'>2. The Laywoman (2)</th>
   <tr>
     <td class='ch' title='T125.2.562b8'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
-    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562b9'>爾時，世尊告諸比丘： 「篤信優婆斯，唯有一女。 彼當云何教訓成就？」</td>
-    <td>It was then that the Bhagavān addressed the monks, “There’s a devoted laywoman who has an only daughter. How should she instruct her to be accomplished?”</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There’s a devoted laywoman who has an only daughter. How should she instruct her to be accomplished?”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562b10'>爾時，諸比丘白世尊曰： 「我等，世尊，不解此義。 世尊是諸法之本。 如來所陳靡不承受。 唯願，世尊，與諸比丘説此深法。 聞已，奉行。」</td>
     <td>The monks then said, “Bhagavān, we don’t understand the meaning of this. The Bhagavān is the source of the teachings. The Tathāgata’s words are never unacceptable. Please, Bhagavān, give the monks a discourse about this profound principle. Having heard it, we’ll approve of it.”</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.562b13'>爾時，世尊告諸比丘：「諦聽！諦聽，善思念之。 吾當為汝分別其義。」</td>
-    <td>The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern the meaning of this for you.”</td>
+    <td class='ch' title='T125.2.562b13'>爾時，世尊告諸比丘： 「諦聽！諦聽，善思念之。 吾當為汝分別其義。」</td>
+    <td id='p3'>3. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern the meaning of this for you.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562b15'>諸比丘對曰： 「如是。」 爾時，諸比丘從佛受教。</td>
@@ -35,19 +35,19 @@ next: EA_09_03.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.562b16'>世尊告曰： 「猶彼篤信優婆斯教訓女曰： 『汝今在家者，當如拘讎多羅優婆斯、難陀母。 所以然者？ 此是其限，此是其量。 世尊受證弟子，所謂拘讎多羅優婆斯、難陀母是。』 若女意欲剃除鬚髮，著三法衣，出家，學道者，當如讖摩比丘尼、優鉢花色比丘尼。 所以然者？ 此是其量，此是其限，所謂讖摩比丘尼、優鉢華色比丘尼。</td>
-    <td>The Bhagavān told them, “There is a devoted laywoman who instructs her daughter, ‘While you’re living at home, you should be like the laywomen Kubjottarā or Nanda’s mother. Why is that? They are your standard; they are your measure. The Bhagavān accepted the realization of these disciples, the laywomen Kubjottarā and Nanda’s mother.’<sup id="ref2"><a href="#n2">2</a></sup> If her daughter decides to cut off her hair, put on the three Dharma robes, leave home, and train on the path, she should be like the nuns Kṣemā and Utpalavarṇā.<sup id="ref3"><a href="#n3">3</a></sup> Why is that? Then, the nuns Kṣemā and Utpalavarṇā would be her standard; they would be her measure.</td>
+    <td id='p4'>4. The Bhagavān told them, “There is a devoted laywoman who instructs her daughter, ‘While you’re living at home, you should be like the laywomen Kubjottarā or Nanda’s mother. Why is that? They are your standard; they are your measure. The Bhagavān accepted the realization of these disciples, the laywomen Kubjottarā and Nanda’s mother.’<sup id="ref2"><a href="#n2">2</a></sup> If her daughter decides to cut off her hair, put on the three Dharma robes, leave home, and train on the path, she should be like the nuns Kṣemā and Utpalavarṇā.<sup id="ref3"><a href="#n3">3</a></sup> Why is that? Then, the nuns Kṣemā and Utpalavarṇā would be her standard; they would be her measure.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562b23'>「好學正法，莫作邪業，興起非法。 設汝生此染著之想，然當墜墮三惡趣中。 善念專心，不果者果，不獲者獲，未得證者今當受證。 所以然者？ 諸比丘，信施之重實不可消，令人不得至道之趣。</td>
-    <td>“Love training in the correct Dharma, don’t do wrong deeds, and don’t be roused by what’s not Dharma. If you produce defiled ideas here, then you’ll fall into the three bad destinies. When you’re mindful and focused, you’ll attain what you haven’t attained, acquire what you haven’t acquired, and realize in the present what you have yet to realize. Why is that? Monks, the honor of a faithful gift that can’t actually be digested will prevent a person from attaining awakening.</td>
+    <td id='p5'>5. “Love training in the correct Dharma, don’t do wrong deeds, and don’t be roused by what’s not Dharma. If you produce defiled ideas here, then you’ll fall into the three bad destinies. When you’re mindful and focused, you’ll attain what you haven’t attained, acquire what you haven’t acquired, and realize in the present what you have yet to realize. Why is that? Monks, the honor of a faithful gift that can’t actually be digested will prevent a person from attaining awakening.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562b27'>「是故，諸比丘，莫生染著之想。 已生當滅。 如是，諸比丘，當作是學。」</td>
-    <td>“Therefore, monks, don’t allow defiled ideas to arise. If they’ve already arisen, you must cease them. Thus, monks, you should train yourselves.”</td>
+    <td id='p6'>6. “Therefore, monks, don’t allow defiled ideas to arise. If they’ve already arisen, you must cease them. Thus, monks, you should train yourselves.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562b29'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
-    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+    <td id='p7'>7. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
   </tr>
 </table>
 
