--- a/01_agama/ekottarika/09/EA_09_07.md
+++ b/01_agama/ekottarika/09/EA_09_07.md
@@ -15,15 +15,15 @@ next: EA_09_08.html
   <th class='en'>7. A Man’s Perception</th>
   <tr>
     <td class='ch' title='T125.2.563a13'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
-    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.563a14'>爾時，世尊告諸比丘： 「我於此眾中不見一法最勝、最妙，眩惑世人，不至永寂，縛著牢獄無有解已。 所謂男子見女色已，便起想著。 意甚愛敬令人不至永寂，縛著牢獄無有解已。 意不捨離，周旋往來。 今世、後世，迴轉五道，動歴劫數。」</td>
-    <td>It was then that the Bhagavān addressed the monks, “I don’t see a single thing in this assembly so supreme and sublime that prevents the benighted worldly person from reaching eternal peace and chains them in a prison where they have no freedom. That is, when a man sees a woman’s form, he becomes attached to the perceptions it produces. A man’s mind craves and esteems it so much that it prevents him from reaching eternal peace and chains him in a prison where he has no freedom. His mind won’t abandon it, and then he goes round and round being reborn. In this world and the next, he circulates among the five destinies for numerous eons.”<sup id="ref2"><a href="#n2">2</a></sup></td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see a single thing in this assembly so supreme and sublime that prevents the benighted worldly person from reaching eternal peace and chains them in a prison where they have no freedom. That is, when a man sees a woman’s form, he becomes attached to the perceptions it produces. A man’s mind craves and esteems it so much that it prevents him from reaching eternal peace and chains him in a prison where he has no freedom. His mind won’t abandon it, and then he goes round and round being reborn. In this world and the next, he circulates among the five destinies for numerous eons.”<sup id="ref2"><a href="#n2">2</a></sup></td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.563a19'>爾時，世尊便説偈曰：</td>
-    <td>The Bhagavān then spoke in verse:</td>
+    <td id='p3'>3. The Bhagavān then spoke in verse:</td>
   </tr>
 <tr>
   <td title='T125.2.563a20'><ul class='verse'>
@@ -55,11 +55,11 @@ next: EA_09_08.html
 </tr>
   <tr>
     <td class='ch' title='T125.2.563a24'>「是故，諸比丘，當除諸色。莫起想著。 如是，諸比丘，當作是學。」</td>
-    <td>“Therefore, monks, one should abandon forms. Don’t become attached to the perceptions they produce. Thus, monks, you should train yourselves.”</td>
+    <td id='p4'>4. “Therefore, monks, one should abandon forms. Don’t become attached to the perceptions they produce. Thus, monks, you should train yourselves.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.563a25'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
-    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
   </tr>
 </table>
 
